CSS: Fixed bug when collapsed fieldsets are not hidden in combination with tabs

--- a/suit/static/suit/css/suit.css
+++ b/suit/static/suit/css/suit.css
@@ -179,6 +179,7 @@ h3{font-weight:bold;font-size:16px;line-height:36px;text-shadow:0 1px rgba(255,2
 .autosize{max-height:150px}
 .legend .description,h2 .description{font-weight:normal;font-size:12px;display:inline-block;margin-left:20px;line-height:normal;color:#999}
 .form-horizontal .suit-tab{visibility:hidden}.form-horizontal .suit-tab.show{visibility:inherit}
+.form-horizontal .suit-tab.collapsed.hide{display:none !important}
 .suit-tab>h2,.form-horizontal .suit-include>h2{margin-top:-10px;margin-bottom:-6px;line-height:36px;padding:0}
 .box,.well{box-shadow:0 0 1px rgba(0,0,0,0.4);-moz-background-clip:padding;-webkit-background-clip:padding-box;background-clip:padding-box;-webkit-border-top-left-radius:4px;-moz-border-radius-topleft:4px;border-top-left-radius:4px;-webkit-border-top-right-radius:4px;-moz-border-radius-topright:4px;border-top-right-radius:4px;-webkit-border-bottom-left-radius:4px;-moz-border-radius-bottomleft:4px;border-bottom-left-radius:4px;-webkit-border-bottom-right-radius:4px;-moz-border-radius-bottomright:4px;border-bottom-right-radius:4px;background:#f6f7f8;padding:10px 12px;border:0}
 .menu-box{margin:0 0 10px 0;padding:5px 0;background-color:#fff}.menu-box li{list-style:none;line-height:18px}.menu-box li a{text-decoration:none;line-height:18px;display:block;padding:5px 10px 5px 13px;color:#666;border-bottom:1px solid #ededed}.menu-box li a:hover{background-color:#f6f7f8}.menu-box li a:hover:first-child{-moz-background-clip:padding;-webkit-background-clip:padding-box;background-clip:padding-box;-webkit-border-top-left-radius:4px;-moz-border-radius-topleft:4px;border-top-left-radius:4px;-webkit-border-top-right-radius:4px;-moz-border-radius-topright:4px;border-top-right-radius:4px}
