--- a/suit/static/suit/less/ui/form.less
+++ b/suit/static/suit/less/ui/form.less
@@ -530,6 +530,9 @@ h3 {
     &.show {
         visibility: inherit;
     }
+    &.collapsed.hide {
+        display: none !important;
+    }
 }
 .suit-tab, .form-horizontal .suit-include {
     >h2 {
